crates/plotnik-tests/tests/02-parser/recovery_validation/field_equals_typo.txt
Q = (node name = (identifier))
------------------ DIAGNOSTICS -------------------
error: grammar fields use `:`, not `=`
 --> query.ptk:1:16
  |
1 | Q = (node name = (identifier))
  |                ^
  |
help: use `:`
  |
1 - Q = (node name = (identifier))
1 + Q = (node name : (identifier))
  |
